textarea rounding on iOS fixed

--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -38,7 +38,7 @@ p {
   margin: 0;
 }
 
-input {
+input, textarea {
   -webkit-appearance: none;
   border-radius: 0;
 }
